# jaguar

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPEC.md
.github/workflows/: benches.yml  check.yml
crates/core/: Cargo.toml
crates/core/benches/: deser.rs  ser.rs  struct.rs
crates/core/src/: lib.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/test-program/: Cargo.toml
crates/test-program/src/: lib.rs
scripts/: fmt.sh  publish.sh
